--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -2,3 +2,5 @@
 @import "base/_global.css";
 @import "base/_variables.css";
 @import "base/_mixins.css";
+@import "modules/_grid.css";
+@import "modules/_large-hero.css";
