--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -19,5 +19,21 @@ html {
 }
 
 header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(/assets/images/hero.jpg);
+  background-size: cover;
+  background-position: center;
   height: 100vh;
+}
+
+.hero-text-box {
+  position: absolute;
+  width: 1140px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+h1 {
+  margin-top: 0;
 }
