Completed header section

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -3,3 +3,7 @@
 @import "base/_variables.css";
 @import "base/_mixins.css";
 @import "modules/_grid.css";
+@import "modules/_row.css";
+@import "modules/_site-header.css";
+@import "modules/_btn.css";
+@import "modules/_main-nav.css";
