Completed features section

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -7,3 +7,5 @@
 @import "modules/_site-header.css";
 @import "modules/_btn.css";
 @import "modules/_main-nav.css";
+@import "modules/_features-section.css";
+@import "modules/_icon.css";
