Completed favorite meals section

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -9,3 +9,4 @@
 @import "modules/_main-nav.css";
 @import "modules/_features-section.css";
 @import "modules/_icon.css";
+@import "modules/_meals-section.css";
