Completed how-it-works section

--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -41,4 +41,12 @@
           color: #fff;
       }
   }
+
+  &--app {
+      img {
+          height: 50px;
+          width: auto;
+          margin-right: 10px;
+      }
+  }
 }
