Completed cities section

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -8,7 +8,9 @@
 @import "modules/_site-header.css";
 @import "modules/_btn.css";
 @import "modules/_main-nav.css";
+@import "modules/_box.css";
 @import "modules/_features-section.css";
 @import "modules/_icon.css";
 @import "modules/_meals-section.css";
 @import "modules/_steps-section.css";
+@import "modules/_cities-section.css";
