--- a/app/assets/styles/modules/_icon.css
+++ b/app/assets/styles/modules/_icon.css
@@ -5,4 +5,18 @@
     color: $mainOrange;
     margin-bottom: 10px;
   }
+
+  &--small {
+    font-size: 120%;
+    display: inline-block;
+    width: 30px;
+    text-align: center;
+    color: $mainOrange;
+    margin-right: 10px;
+
+    /* align text and icons */
+    line-height: 120%;
+    vertical-align: middle;
+    margin-top: -5px;
+  }
 }
