Completed the testimonials section

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -14,3 +14,4 @@
 @import "modules/_meals-section.css";
 @import "modules/_steps-section.css";
 @import "modules/_cities-section.css";
+@import "modules/_testimonials-section.css";
