--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -15,3 +15,4 @@
 @import "modules/_steps-section.css";
 @import "modules/_cities-section.css";
 @import "modules/_testimonials-section.css";
+@import "modules/_plans-section.css";
