Completed form section

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -16,3 +16,4 @@
 @import "modules/_cities-section.css";
 @import "modules/_testimonials-section.css";
 @import "modules/_plans-section.css";
+@import "modules/_form-section.css";
