Completed the footer section

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -17,3 +17,4 @@
 @import "modules/_testimonials-section.css";
 @import "modules/_plans-section.css";
 @import "modules/_form-section.css";
+@import "modules/_site-footer.css";
