--- a/app/assets/styles/base/_mixins.css
+++ b/app/assets/styles/base/_mixins.css
@@ -1,17 +1,23 @@
-@define-mixin atSmall {
-  @media (min-width: 530px) {
+@define-mixin atLarge {
+  @media only screen and (max-width: 1200px) {
     @mixin-content;
   }
 }
 
 @define-mixin atMedium {
-  @media (min-width: 800px) {
+  @media only screen and (max-width: 1023px) {
     @mixin-content;
   }
 }
 
-@define-mixin atLarge {
-  @media (min-width: 1200px) {
+@define-mixin atSmall {
+  @media only screen and (max-width: 767px) {
+    @mixin-content;
+  }
+}
+
+@define-mixin atMinimum {
+  @media only screen and (max-width: 480px) {
     @mixin-content;
   }
 }
