--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,4 +1,19 @@
 .row {
   max-width: 1140px;
   margin: 0 auto;
+
+  @mixin atLarge {
+    padding: 0 2%;
+  }
+
+  @mixin atSmall {
+    padding: 0 4%;
+  }
+}
+
+.col {
+  @mixin atSmall {
+    width: 100%;
+    margin: 0 0 4% 0;
+  }
 }
