--- a/app/assets/styles/modules/_features-section.css
+++ b/app/assets/styles/modules/_features-section.css
@@ -24,6 +24,16 @@
         width: 70%;
         margin-left: 15%;
         margin-bottom: 30px;
+
+        @mixin atMedium {
+            width: 80%;
+            margin-left: 10%;
+        }
+
+        @mixin atSmall {
+            width: 100%;
+            margin-left: 0;
+        }
     }
 
     h3 {
