--- a/app/assets/styles/modules/_icon.css
+++ b/app/assets/styles/modules/_icon.css
@@ -18,5 +18,10 @@
     line-height: 120%;
     vertical-align: middle;
     margin-top: -5px;
+
+    @mixin atMedium {
+      width: 17px;
+      margin-right: 5px;
+    }
   }
 }
