--- a/app/assets/styles/modules/_plans-section.css
+++ b/app/assets/styles/modules/_plans-section.css
@@ -37,6 +37,11 @@
     margin-left: 5%;
     box-shadow: 0 2px 2px #efefef;
 
+    @mixin atMedium {
+        width: 100%;
+        margin-left: 0%;
+    }
+
     div {
         padding: 15px;
         border-bottom: 1px solid #e8e8e8;
@@ -67,6 +72,10 @@
     margin-bottom: 10px;
     font-weight: 100;
     color: $mainOrange;
+
+    @mixin atMedium {
+        font-size: 250%;
+    }
 
     span {
         font-size: 30%;
