--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -14,6 +14,15 @@ header {
   left: 50%;
   transform: translate(-50%, -50%);
 
+  @mixin atLarge {
+    width: 100%;
+    padding: 0 2%;
+  }
+
+  @mixin atSmall {
+    padding: 0 4%;
+  }
+
   h1 {
     margin-top: 0;
     margin-bottom: 20px;
