--- a/app/assets/styles/modules/_main-nav.css
+++ b/app/assets/styles/modules/_main-nav.css
@@ -1,38 +1,37 @@
 .main-nav {
+  float: right;
+  list-style: none;
+  margin-top: 55px;
 
-  @mixin atSmall {
-    display: none;
-  }
+  li {
+    display: inline-block;
+    margin-left: 40px;
 
-  &__logo {
-    height: 100px;
-    width: auto;
-    float: left;
-    margin-top: 20px;
-  }
-
-  &__list {
-    float: right;
-    list-style: none;
-    margin-top: 55px;
-
-    li {
-      display: inline;
-      margin-left: 40px;
-
-      a {
+    a {
+      &:link, &:visited {
         padding: 8px 0;
         color: #fff;
         text-decoration: none;
         text-transform: uppercase;
         font-size: 90%;
-        transition: border-bottom .2s;
+        border-bottom: 2px solid transparent;
+        transition: border-bottom 0.2s;
+      }
 
-        &:hover,
-        &:active {
-          border-bottom: 2px solid $mainOrange;
-        }
+      &:hover, &:active {
+        border-bottom: 2px solid $mainOrange;
       }
     }
   }
+
+  @mixin atSmall {
+    display: none;
+  }
+}
+
+.logo {
+  height: 100px;
+  width: auto;
+  float: left;
+  margin-top: 20px;
 }
