--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -18,3 +18,4 @@
 @import "modules/_plans-section.css";
 @import "modules/_form-section.css";
 @import "modules/_site-footer.css";
+@import "modules/_sticky.css";
